--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
     display: flex;
     justify-content: center;
     align-items: flex-start; /* Align at the top */
-    height: 100vh; /* Full viewport height */
-    padding-top: 20px; /* Adjust top padding as needed */
+    width: 100%; /* Full width */
   }
 
   .music-player {
